since we no longer put PDFs in IE...z-index messes up the message.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@21639 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_link-styles.scss
+++ b/src/main/resources/scss/_link-styles.scss
@@ -152,9 +152,9 @@ a{
 			}
 		}
 
-		.x-ie &, .x-ie10 &{
-			z-index: -2;
-		}
+		//.x-ie &, .x-ie10 &{
+		//	z-index: -2;
+		//}
 
 		.back-button{
 			cursor: pointer;
